# CppCSInterop

./: .gitignore  CMakeLists.txt  Directory.Build.targets  README.md  setup.bat
CSComponent/: CSClass.cs  CSComponent.csproj
CSComponentClient/: CMakeLists.txt  WinRTCustomActivation.cpp  WinRTCustomActivation.h  dllmain.cpp
CSTestEXE/: CSTestEXE.csproj  main.cs
CppComponent/: CMakeLists.txt  Class.cpp  Class.h  Class.idl  pch.h
CppComponentProjection/: CppComponentProjection.csproj
CppTestEXE/: CMakeLists.txt  compat.manifest  main.cpp
UndockedRegFreeWinRT/: CMakeLists.txt
detours/: CMakeLists.txt
